--- a/_includes/category-cards.html
+++ b/_includes/category-cards.html
@@ -1,7 +1,7 @@
 <div class="card-columns">
     {% for item in site.category %}
     <div class="card">
-        <img class="card-img-top" src="http://via.placeholder.com/266x160" alt="Card image cap">
+        <img class="card-img-top" src="https://via.placeholder.com/266x160" alt="Card image cap">
         <div class="card-body">
             <h5 class="card-title"> {{ item.title }}</h5>
             <p class="card-text">{{ item.opening-sentence }}</p>
