--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,10 @@
+html {
+    height: 100%;
+}
+body {
+    min-height: 100%;
+}
+
 #hero {
     background-image: url("/images/edmonton.jpg");
     background-repeat: no-repeat;
