New disqus comments

--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -20,7 +20,7 @@ layout: default
         <div class="d-flex mx-auto" style="max-width: 800px;">
             <div class="mr-auto">
                 <h4 class="mb-0">{{post.title}}</h4>
-                <p class="font-weight-light">Published by <cite>Rick Comrie</cite> on {{ post.date | date: "%B %d, %Y" }}
+                <p class="font-weight-light">Published on {{ post.date | date: "%B %d, %Y" }}
                     </p>
             </div>
 
